--- a/style.css
+++ b/style.css
@@ -36,7 +36,8 @@ body{
 
 .btn_outlined{
     background-color: transparent;
-    border: 1px solid rgb(45, 119, 255);
+    border: 1px solid rgb(255, 255, 255);
+    margin-right: 5px;
     
 }
 .btn_outlined1{
