--- a/style.css
+++ b/style.css
@@ -34,6 +34,14 @@ body{
 
 }
 
+/* .links_outline_border1:hover{
+    /* background-color: rgb(255, 255, 255); */
+    /* border-radius: 5px;
+   
+
+
+} */ */
+
 .btn_outlined{
     background-color: transparent;
     border: 1px solid rgb(255, 255, 255);
@@ -114,3 +122,29 @@ hr{
          
      
         }
+
+
+
+
+
+
+
+        .rocklight {
+            overflow-y:hidden;
+             height: 358px;
+             ;
+            
+             
+         }
+
+
+
+
+
+        .rocklight:hover {
+           overflow-y:auto;
+           box-shadow: -3px -6px 24px 7px darkgrey;
+            
+        }
+
+       
