--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 
 
 body{
-    background:rgba(0,0,0,0.7)url(https://i.ytimg.com/vi/kCfiuuZ8rTc/maxresdefault.jpg);
+    background:rgba(0,0,0,0.5)url(https://i.ytimg.com/vi/kCfiuuZ8rTc/maxresdefault.jpg);
     background-blend-mode: darken;
     background-repeat: no-repeat;
     background-size: cover;
@@ -55,7 +55,9 @@ hr{
     height: 2px;
     background-color: rgb(0, 0, 0);
 }
-
+.iframe_border{
+    border: 3px solid white;
+}
 
 
 
