--- a/style.css
+++ b/style.css
@@ -69,9 +69,9 @@ hr {
 
 
 
-.iframe_border {
+/* .iframe_border { */
     border: 3px solid white;
-}
+/* } */
 
 
 
@@ -93,6 +93,17 @@ hr {
     overflow-y: auto;
     box-shadow: -3px -6px 24px 7px darkgrey;
 
+}
+
+
+.socialmedia_roundshape {
+    background-color: rgb(54, 54, 54);
+    /* width: 56px; */
+    padding: 15px;
+    border-radius: 18%;
+}
+.socialApps2{
+    margin-right: 50px;
 }
 
 
@@ -152,6 +163,19 @@ hr {
         top: 50px;
         /* left: 35%; */
     }
+    body {
+       /* background-color: black; */
+       background-image: url(https://w0.peakpx.com/wallpaper/264/596/HD-wallpaper-smoke-wavy-abstraction-black-background.jpg);
+    }
+
+    .links_outline_border1 {
+        background-color: rgb(82, 88, 253);
+        border-radius: 5px;
+       
+    
+    
+    }
+    
 
 }
 
