--- a/style.css
+++ b/style.css
@@ -13,11 +13,14 @@
 
 
 body {
-    background: rgba(0, 0, 0, 0.5)url(https://images.unsplash.com/photo-1636575152642-2b7350009d4c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDExfHx8ZW58MHx8fHx8&w=1000&q=80);
+    background: rgba(0, 0, 0, 0.4)url(https://images.unsplash.com/photo-1636575152642-2b7350009d4c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDExfHx8ZW58MHx8fHx8&w=1000&q=80);
     background-blend-mode: darken;
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+}
+.text_white{
+    color: blue;
 }
 
 
