--- a/style.css
+++ b/style.css
@@ -9,8 +9,14 @@
 }
 
 
+.top_nav_border_radius{
+    border-radius: 10px;
+}
 
-
+.google_outline{
+   list-style: none;
+   text-decoration: none;
+}
 
 body {
     background: rgba(0, 0, 0, 0.4)url(https://images.unsplash.com/photo-1636575152642-2b7350009d4c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDExfHx8ZW58MHx8fHx8&w=1000&q=80);
@@ -20,7 +26,7 @@ body {
     background-attachment: fixed;
 }
 .text_white{
-    color: blue;
+    color: rgb(255, 255, 255);
 }
 
 
@@ -35,7 +41,7 @@ body {
 }
 
 .links_outline_border1 {
-    background-color: black;
+    background-color: rgb(22, 49, 255);
     border-radius: 5px;
 
 
@@ -43,9 +49,9 @@ body {
 
 
 
-.btn_outlined {
+.search_outlined {
     background-color: transparent;
-    border: 1px solid rgb(255, 255, 255);
+    border: 1px solid rgb(3, 3, 3);
     margin-right: 5px;
 
 }
@@ -172,7 +178,7 @@ hr {
     }
 
     .links_outline_border1 {
-        background-color: rgb(82, 88, 253);
+        background-color: rgb(0, 8, 251);
         border-radius: 5px;
        
     
