--- a/style.css
+++ b/style.css
@@ -60,7 +60,9 @@ body {
 .fixed_top{
     position: fixed;
     z-index: 1;
-    top: 430px;
+    top: 415px;
+  
+
 }
 
 
@@ -73,16 +75,17 @@ body {
 
 .socialApps3{
     position: fixed;
-    top: 580px;
+    top: 593px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     gap: 7px;
-    right:70px;
-    background-color: rgb(4, 4, 4);
+    justify-content: center;
+    align-items: center;
+   
+    background: rgba(18, 87, 199, 0.7);
     padding: 10px;
     border-radius: 20px;
     z-index: 1;
-    
 }
 
 
@@ -174,6 +177,7 @@ hr {
     .socialApps {
         display: none;
     }
+   
  
 
 }
@@ -204,11 +208,8 @@ hr {
     .links_outline_border1 {
         background-color: rgb(0, 8, 251);
         border-radius: 5px;
-       
-    
-    
     }
-
+    
     .youtube_videos{
         width: 100%;
     }
