--- a/style.css
+++ b/style.css
@@ -95,7 +95,14 @@ body {
     border-radius: 75px;
 }
 
- 
+.fixed_up_png {
+    width: 40px;
+    position: fixed;
+    top: 450px;
+    right: 0;
+}
+
+
 .fa-brands:hover{
     box-shadow: 0px 10px 11px -1px black;
     /* border: 1px solid rgb(0, 0, 0); */
